--- a/apps/web/public/index.html
+++ b/apps/web/public/index.html
@@ -42,6 +42,7 @@
 
     <link rel="preload" href="%PUBLIC_URL%/fonts/Basel-Grotesk-Book.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="%PUBLIC_URL%/fonts/Basel-Grotesk-Medium.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="%PUBLIC_URL%/fonts/screener-400.woff2" as="font" type="font/woff2" crossorigin />
 
     <!-- Include <link rel="preload"> for js assets so that they are loaded with high priority. -->
     <%= htmlWebpackPlugin.files.js.map((href) => `<link rel="preload" href="${href}" as="script" />`).join('\n    ') %>
@@ -73,6 +74,16 @@
         src: 
           url('%PUBLIC_URL%/fonts/Basel-Grotesk-Book.woff2') format('woff2'),
           url('%PUBLIC_URL%/fonts/Basel-Grotesk-Book.woff') format('woff');
+      }
+
+      @font-face {
+        font-family: 'Screener';
+        font-weight: 400;
+        font-style: normal;
+        font-display: block;
+        src: 
+          url('%PUBLIC_URL%/fonts/screener-400.woff2') format('woff2'),
+          url('%PUBLIC_URL%/fonts/screener-400.woff') format('woff');
       }
 
       @supports (font-variation-settings: normal) {
